--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <div class="section-title position-relative text-center">
                 <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">PARA:</h6>
-                <h1 class="font-secondary display-4">Wilson, Rocio y Familia</h1>
+                <h1 class="font-secondary display-4">Antonio y Mariela</h1>
                 <i class="far fa-heart text-dark"></i>
             </div>
             <div class="row justify-content-center">
